<resources>
    <string name="app_name">PriceLoader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="emptyText">XXXXX</string>

    <!--MenuAC界面-->
    <string name="menuAC_tx_title">云朵的小店</string>
    <string name="menuAC_bt_search">查询商品</string>
    <string name="menuAC_bt_add">添加商品</string>
    <string name="menuAC_bt_list">商品列表</string>
    <string name="menuAC_bt_toMainAC">进入主页</string>

    <!--SearchAC界面-->
    <string name="SearchAC_bt_clean">清空</string>
    <string name="SearchAC_bt_label">总共：</string>
    <string name="SearchAC_imgv_desc">删除键</string>


    <!--CameraFragment购物车列表-->
    <string name="goodsList_id">编号</string>
    <string name="goodsList_name">名称</string>
    <string name="goodsList_singlePrice">售价</string>
    <string name="goodsList_lable">售价:</string>
    <string name="goodsList_count">数量</string>
    <string name="goodsList_finalPrice">金额</string>
    <string name="item_goodsList_zhanwei">xxxxxxxxxxxxxxxx</string>
    <string name="item_goodsList_zhanwei2">xxx.xx</string>

    <!--ControlllFragment添加列表-->
    <string name="controllFrag_bt_scan">打开扫描器</string>
    <string name="controllFrag_bt_submit">提交</string>
    <string name="controllFrag_tx_id">条码：</string>
    <string name="controllFrag_tx_name">产品名：</string>
    <string name="controllFrag_tx_singleprice">单价：</string>
    <string name="controllFrag_tx_finalprice">xxxxx</string>
    <string name="controllFrag_tx_count">xxxxx</string>


    <!--AddAC添加列表-->
    <string name="AddAC_tx_title">添加商品属性</string>
    <string name="AddAC_bt_scan">打开扫描器</string>
    <string name="AddAC_bt_submit">提交</string>
    <string name="AddAC_bt_clean">清空</string>
    <string name="AddAC_bt_cancel">取消</string>
    <string name="AddAC_tx_id">条码：</string>
    <string name="AddAC_tx_name">产品名：</string>
    <string name="AddAC_tx_singleprice">单价：</string>
    <string name="AddAC_tx_finalprice">xxxxx</string>
    <string name="AddAC_tx_count">xxxxx</string>

    <!--DetailPageAC详情界面-->
    <string name="DetailPageAC_tx_title">商品详情</string>
    <string name="DetailPageAC_bt_scan">打开扫描器</string>
    <string name="DetailPageAC_bt_submit">提交</string>
    <string name="DetailPageAC_tx_id">条码：</string>
    <string name="DetailPageAC_tx_name">产品名：</string>
    <string name="DetailPageAC_tx_singleprice">单价：</string>
    <string name="DetailPageAC_tx_finalprice">xxxxx</string>
    <string name="DetailPageAC_tx_count">xxxxx</string>
    <string name="DetailPageAC_bt_confirm">确定</string>
    <string name="DetailPageAC_bt_delete">删除</string>
    <string name="DetailPageAC_bt_update">更新</string>

    <!--ListAC详情界面-->
    <string name="ListAC_bt_return">返回</string>
    <string name="ListAC_bt_delete">删除</string>

    <string name="bt_text">扫描条形码</string>
    <string name="title_activity_test">TestAC</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!---->

</resources>