<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailPageAC">

    <TextView
        android:id="@+id/DetailPageAC_tx_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DetailPageAC_tx_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/DetailPageAC_tx_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailPageAC_tx_id" />

            <EditText
                android:id="@+id/DetailPageAC_ed_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/DetailPageAC_tx_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailPageAC_tx_name" />

            <EditText
                android:id="@+id/DetailPageAC_ed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/DetailPageAC_tx_singleprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailPageAC_tx_singleprice" />

            <EditText
                android:id="@+id/DetailPageAC_ed_singleprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/DetailPageAC_tx_finalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailPageAC_tx_finalprice" />

            <EditText
                android:id="@+id/DetailPageAC_ed_finalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/DetailPageAC_tx_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailPageAC_tx_count" />

            <EditText
                android:id="@+id/DetailPageAC_ed_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/DetailPageAC_bt_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DetailPageAC_bt_confirm" />

        <android.widget.Button
            android:id="@+id/DetailPageAC_bt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_style_red2"
            android:text="@string/DetailPageAC_bt_delete"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/DetailPageAC_bt_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_style_blue"
            android:text="@string/DetailPageAC_bt_update" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>