<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CameraFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/goodsList_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goodsList_id"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/goodsList_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goodsList_name"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/goodsList_singlePrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goodsList_singlePrice"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/goodsList_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goodsList_count"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/goodsList_finalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goodsList_finalPrice"
                            android:textAlignment="center" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_goodsList"
                    android:layout_width="413dp"
                    android:layout_height="0dp"
                    android:background="@color/light_grey"
                    app:layout_constraintBottom_toTopOf="@+id/bt_scan"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.4">

                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/bt_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_goodsList"
                    android:layout_alignParentBottom="true"
                    android:text="@string/bt_text"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>